--- a/index.html
+++ b/index.html
@@ -114,13 +114,13 @@
     </header>
     <main>
       <!-- *********************************functionality section***************************** -->
-      <section class="py-24 px-4 lg:px-0 max-w-[1400px] mx-auto">
+      <section class="pt-24 px-4 lg:px-0 max-w-[1400px] mx-auto">
         <h2 class="text-center mb-10 font-semibold text-3xl text-[#1F2937]">
           Choose Your Trees
         </h2>
         <div class="grid grid-cols-1 md:grid-cols-5 gap-6">
           <!-- category -->
-          <div>
+          <div class="col-span-1 md:col-span-1 w-full">
             <h3 class="text-[20px] mb-4 font-semibold text-black">
               Categories
             </h3>
@@ -143,15 +143,66 @@
             </div>
           </div>
           <!-- card -->
-          <div class="col-span-3 grid grid-cols-1 md:grid-cols-3 gap-6">
-            <div class="bg-white rounded-lg p-4 space-y-3">
+          <div
+            class="col-span-1 md:col-span-3 grid grid-cols-1 md:grid-cols-3 gap-6"
+          >
+            <div class="bg-white rounded-2xl p-4 space-y-3">
               <img class="rounded-lg" src="./assets/about.png" alt="" />
               <h3 class="text-black font-semibold text-sm">Mango Tree</h3>
               <p class="-mt-1 text-[12px] text-[#1F2937]">
                 Join our mission to plant 1 million trees and make the Earth
                 greener for future generations.
               </p>
-              <div></div>
+              <div class="flex justify-between items-center">
+                <p
+                  class="text-[#15803D] bg-[#DCFCE7] rounded-3xl text-sm py-1 px-3"
+                >
+                  Fruit Tree
+                </p>
+                <p class="text-sm font-semibold">৳500</p>
+              </div>
+              <button
+                class="btn rounded-3xl w-full py-3 px-5 bg-[#15803D] text-white text-sm border-none shadow-none hover:bg-[#229c4d]"
+              >
+                Plant a Tree
+              </button>
+            </div>
+            <div class="bg-white rounded-2xl p-4 space-y-3">
+              <img class="rounded-lg" src="./assets/about.png" alt="" />
+              <h3 class="text-black font-semibold text-sm">Mango Tree</h3>
+              <p class="-mt-1 text-[12px] text-[#1F2937]">
+                Join our mission to plant 1 million trees and make the Earth
+                greener for future generations.
+              </p>
+              <div class="flex justify-between items-center">
+                <p
+                  class="text-[#15803D] bg-[#DCFCE7] rounded-3xl text-sm py-1 px-3"
+                >
+                  Fruit Tree
+                </p>
+                <p class="text-sm font-semibold">৳500</p>
+              </div>
+              <button
+                class="btn rounded-3xl w-full py-3 px-5 bg-[#15803D] text-white text-sm border-none shadow-none hover:bg-[#229c4d]"
+              >
+                Plant a Tree
+              </button>
+            </div>
+            <div class="bg-white rounded-2xl p-4 space-y-3">
+              <img class="rounded-lg" src="./assets/about.png" alt="" />
+              <h3 class="text-black font-semibold text-sm">Mango Tree</h3>
+              <p class="-mt-1 text-[12px] text-[#1F2937]">
+                Join our mission to plant 1 million trees and make the Earth
+                greener for future generations.
+              </p>
+              <div class="flex justify-between items-center">
+                <p
+                  class="text-[#15803D] bg-[#DCFCE7] rounded-3xl text-sm py-1 px-3"
+                >
+                  Fruit Tree
+                </p>
+                <p class="text-sm font-semibold">৳500</p>
+              </div>
               <button
                 class="btn rounded-3xl w-full py-3 px-5 bg-[#15803D] text-white text-sm border-none shadow-none hover:bg-[#229c4d]"
               >
@@ -160,7 +211,22 @@
             </div>
           </div>
           <!-- cart -->
-          <div></div>
+          <div class="col-span-1 md:col-span-1 w-full bg-white rounded-2xl p-4">
+            <h3 class="text-[20px] mb-4 font-semibold text-black">Your Cart</h3>
+            <div class="">
+              <div
+                class="flex justify-between items-center py-2 px-3 bg-[#F0FDF4] rounded-lg"
+              >
+                <div class="space-y-1.5">
+                  <h5 class="text-black font-semibold text-sm">Mango Tree</h5>
+                  <p class="text-gray-400">৳500 x 1</p>
+                </div>
+                <div>
+                  <i class="fa-solid fa-x text-gray-400 cursor-pointer"></i>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
       <!-- **********************************About the Campaign****************************** -->
