--- a/index.html
+++ b/index.html
@@ -124,23 +124,12 @@
             <h3 class="text-[20px] mb-4 font-semibold text-black">
               Categories
             </h3>
-            <div>
-              <p
+             <p
                 class="py-2 px-2.5 rounded-sm bg-[#15803D] text-white cursor-pointer text-base"
               >
                 All Trees
               </p>
-              <p
-                class="py-2 px-2.5 rounded-sm text-black hover:bg-[#15803D] hover:text-white cursor-pointer text-base"
-              >
-                All Trees
-              </p>
-              <p
-                class="py-2 px-2.5 rounded-sm text-black hover:bg-[#15803D] hover:text-white cursor-pointer text-base"
-              >
-                All Trees
-              </p>
-            </div>
+            <div id="category-container"></div>
           </div>
           <!-- card -->
           <div
@@ -337,5 +326,8 @@
         </div>
       </footer>
     </main>
+
+    <!-- scripts -->
+    <script src="./scripts/index.js"></script>
   </body>
 </html>
