--- a/index.html
+++ b/index.html
@@ -124,81 +124,18 @@
             <h3 class="text-[20px] mb-4 font-semibold text-black">
               Categories
             </h3>
-             <p
-                class="py-2 px-2.5 rounded-sm bg-[#15803D] text-white cursor-pointer text-base"
-              >
-                All Trees
-              </p>
+            <p
+              class="py-2 px-2.5 rounded-sm bg-[#15803D] text-white cursor-pointer text-base"
+            >
+              All Trees
+            </p>
             <div id="category-container"></div>
           </div>
           <!-- card -->
           <div
+            id="card-container"
             class="col-span-1 md:col-span-3 grid grid-cols-1 md:grid-cols-3 gap-6"
-          >
-            <div class="bg-white rounded-2xl p-4 space-y-3">
-              <img class="rounded-lg" src="./assets/about.png" alt="" />
-              <h3 class="text-black font-semibold text-sm">Mango Tree</h3>
-              <p class="-mt-1 text-[12px] text-[#1F2937]">
-                Join our mission to plant 1 million trees and make the Earth
-                greener for future generations.
-              </p>
-              <div class="flex justify-between items-center">
-                <p
-                  class="text-[#15803D] bg-[#DCFCE7] rounded-3xl text-sm py-1 px-3"
-                >
-                  Fruit Tree
-                </p>
-                <p class="text-sm font-semibold">৳500</p>
-              </div>
-              <button
-                class="btn rounded-3xl w-full py-3 px-5 bg-[#15803D] text-white text-sm border-none shadow-none hover:bg-[#229c4d]"
-              >
-                Plant a Tree
-              </button>
-            </div>
-            <div class="bg-white rounded-2xl p-4 space-y-3">
-              <img class="rounded-lg" src="./assets/about.png" alt="" />
-              <h3 class="text-black font-semibold text-sm">Mango Tree</h3>
-              <p class="-mt-1 text-[12px] text-[#1F2937]">
-                Join our mission to plant 1 million trees and make the Earth
-                greener for future generations.
-              </p>
-              <div class="flex justify-between items-center">
-                <p
-                  class="text-[#15803D] bg-[#DCFCE7] rounded-3xl text-sm py-1 px-3"
-                >
-                  Fruit Tree
-                </p>
-                <p class="text-sm font-semibold">৳500</p>
-              </div>
-              <button
-                class="btn rounded-3xl w-full py-3 px-5 bg-[#15803D] text-white text-sm border-none shadow-none hover:bg-[#229c4d]"
-              >
-                Plant a Tree
-              </button>
-            </div>
-            <div class="bg-white rounded-2xl p-4 space-y-3">
-              <img class="rounded-lg" src="./assets/about.png" alt="" />
-              <h3 class="text-black font-semibold text-sm">Mango Tree</h3>
-              <p class="-mt-1 text-[12px] text-[#1F2937]">
-                Join our mission to plant 1 million trees and make the Earth
-                greener for future generations.
-              </p>
-              <div class="flex justify-between items-center">
-                <p
-                  class="text-[#15803D] bg-[#DCFCE7] rounded-3xl text-sm py-1 px-3"
-                >
-                  Fruit Tree
-                </p>
-                <p class="text-sm font-semibold">৳500</p>
-              </div>
-              <button
-                class="btn rounded-3xl w-full py-3 px-5 bg-[#15803D] text-white text-sm border-none shadow-none hover:bg-[#229c4d]"
-              >
-                Plant a Tree
-              </button>
-            </div>
-          </div>
+          ></div>
           <!-- cart -->
           <div class="col-span-1 md:col-span-1 w-full bg-white rounded-2xl p-4">
             <h3 class="text-[20px] mb-4 font-semibold text-black">Your Cart</h3>
