added modal functionality

--- a/index.html
+++ b/index.html
@@ -262,6 +262,17 @@
           <p>&copy; 2025 Green Earth. All Rights Reserved.</p>
         </div>
       </footer>
+      <!-- modal -->
+      <dialog id="word_modal" class="modal modal-bottom sm:modal-middle">
+        <div class="modal-box">
+          <div id="details-container" class="space-y-5"></div>
+          <div class="modal-action">
+            <form method="dialog">
+              <button class="btn">Close</button>
+            </form>
+          </div>
+        </div>
+      </dialog>
     </main>
 
     <!-- scripts -->
