--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <li><a>Plant a Tree</a></li>
               </ul>
             </div>
-            <a class="text-xl text-white font-medium"
+            <a class="text-lg md:text-xl text-white font-medium"
               ><i class="fa-solid fa-leaf"></i> Green Earth</a
             >
           </div>
@@ -120,12 +120,14 @@
         </h2>
         <div class="grid grid-cols-1 md:grid-cols-5 gap-6">
           <!-- category -->
-          <div class="col-span-1 md:col-span-1 w-full">
+          <div
+            class="col-span-1 md:col-span-1 w-full bg-white rounded-2xl p-4 border border-[#e8e8e8] shadow-[6px_6px_12px_#c5c5c5,-6px_-6px_12px_#ffffff] transition-all duration-300 hover:border-white"
+          >
             <h3 class="text-[20px] mb-4 font-semibold text-black">
               Categories
             </h3>
-            <p
-              class="py-2 px-2.5 rounded-sm bg-[#15803D] text-white cursor-pointer text-base"
+            <p id="all-category"
+              class="py-2 px-2.5 rounded-sm cursor-pointer hover:bg-[#15803d] hover:text-white text-base active"
             >
               All Trees
             </p>
@@ -137,7 +139,9 @@
             class="col-span-1 md:col-span-3 grid grid-cols-1 md:grid-cols-3 gap-6"
           ></div>
           <!-- cart -->
-          <div class="col-span-1 md:col-span-1 w-full bg-white rounded-2xl p-4">
+          <div
+            class="col-span-1 md:col-span-1 w-full bg-white rounded-2xl p-4 border border-[#e8e8e8] shadow-[6px_6px_12px_#c5c5c5,-6px_-6px_12px_#ffffff] transition-all duration-300 hover:border-white"
+          >
             <h3 class="text-[20px] mb-4 font-semibold text-black">Your Cart</h3>
             <div class="">
               <div
