--- a/index.html
+++ b/index.html
@@ -143,18 +143,8 @@
             class="col-span-1 md:col-span-1 w-full bg-white rounded-2xl p-4 border border-[#e8e8e8] shadow-[6px_6px_12px_#c5c5c5,-6px_-6px_12px_#ffffff] transition-all duration-300 hover:border-white"
           >
             <h3 class="text-[20px] mb-4 font-semibold text-black">Your Cart</h3>
-            <div class="">
-              <div
-                class="flex justify-between items-center py-2 px-3 bg-[#F0FDF4] rounded-lg"
-              >
-                <div class="space-y-1.5">
-                  <h5 class="text-black font-semibold text-sm">Mango Tree</h5>
-                  <p class="text-gray-400">৳500 x 1</p>
-                </div>
-                <div>
-                  <i class="fa-solid fa-x text-gray-400 cursor-pointer"></i>
-                </div>
-              </div>
+            <div id="cartContainer" class="">
+              
             </div>
           </div>
         </div>
