--- a/index.html
+++ b/index.html
@@ -135,7 +135,10 @@
             <div id="category-container"></div>
           </div>
           <!-- spinner -->
-          <div id="spinner" class="earth col-span-1 md:col-span-3 flex flex-col items-center justify-center min-h-[300px] hidden">
+          <div
+            id="spinner"
+            class="earth col-span-1 md:col-span-3 flex flex-col items-center justify-center min-h-[300px] hidden"
+          >
             <div class="earth-loader">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200">
                 <path
@@ -178,14 +181,8 @@
             class="col-span-1 md:col-span-1 w-full bg-white rounded-2xl p-4 border border-[#e8e8e8] shadow-[6px_6px_12px_#c5c5c5,-6px_-6px_12px_#ffffff] transition-all duration-300 hover:border-white"
           >
             <h3 class="text-[20px] mb-4 font-semibold text-black">Your Cart</h3>
-            <div id="cartContainer" class="">
-              <div
-                class="mt-4 py-2.5 border-t-gray-300 border-t flex justify-between items-center"
-              >
-                <p class="font-semibold">Total:</p>
-                <p class="font-medium">৳1000</p>
-              </div>
-            </div>
+            <div id="cartContainer" class=""></div>
+            <div id="totalContainer"></div>
           </div>
         </div>
       </section>
