--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
                 tabindex="0"
                 class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow"
               >
-                <li><a>About</a></li>
-                <li><a>Gallery</a></li>
-                <li><a>Plant a Tree</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#gallery">Gallery</a></li>
+                <li><a href="#plant-a-tree">Plant a Tree</a></li>
               </ul>
             </div>
             <a class="text-lg md:text-xl text-white font-medium"
@@ -78,9 +78,9 @@
           </div>
           <div class="navbar-center hidden lg:flex">
             <ul class="menu menu-horizontal px-1 text-white text-sm">
-              <li><a>About</a></li>
-              <li><a>Gallery</a></li>
-              <li><a>Plant a Tree</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#gallery">Gallery</a></li>
+              <li><a href="#plant-a-tree">Plant a Tree</a></li>
             </ul>
           </div>
           <div class="navbar-end">
@@ -114,7 +114,7 @@
     </header>
     <main>
       <!-- *********************************functionality section***************************** -->
-      <section class="pt-24 px-4 lg:px-0 max-w-[1400px] mx-auto">
+      <section id="gallery" class="pt-24 px-4 lg:px-0 max-w-[1400px] mx-auto">
         <h2 class="text-center mb-10 font-semibold text-3xl text-[#1F2937]">
           Choose Your Trees
         </h2>
@@ -187,7 +187,7 @@
         </div>
       </section>
       <!-- **********************************About the Campaign****************************** -->
-      <section class="py-24 px-4 lg:px-0">
+      <section id="about" class="py-24 px-4 lg:px-0">
         <h2 class="text-center mb-10 font-semibold text-3xl text-[#1F2937]">
           About the Campaign
         </h2>
@@ -217,7 +217,7 @@
         </div>
       </section>
       <!-- ***************************************Our Impact************************************** -->
-      <section class="py-24 px-4 lg:px-0 bg-[#CFF0DC]">
+      <section id="" class="py-24 px-4 lg:px-0 bg-[#CFF0DC]">
         <div class="max-w-[1400px] mx-auto">
           <h2 class="text-center mb-10 font-semibold text-3xl text-[#1F2937]">
             Our Impact
@@ -251,7 +251,7 @@
         </div>
       </section>
       <!-- ***************************************form************************************** -->
-      <section class="bg-[#166534] py-24 px-4 lg:px-0">
+      <section id="plant-a-tree" class="bg-[#166534] py-24 px-4 lg:px-0">
         <h2 class="text-center mb-10 font-semibold text-3xl text-white">
           Plant a Tree Today
         </h2>
